--- a/config.yaml
+++ b/config.yaml
@@ -15,25 +15,25 @@ settings:
   dayInHistogramNotOperational: ' incident(s)' # xx incident(s) recorded
 
 monitors:
-  - id: workers-cloudflare-com # unique identifier
-    name: workers.cloudflare.com
+  - id: comment.hzxcaq.us.kg # unique identifier
+    name: comment.hzxcaq.us.kg
     description: 'You write code. They handle the rest.' # default=empty
-    url: 'https://workers.cloudflare.com/' # URL to fetch
+    url: 'https://comment.hzxcaq.us.kg/' # URL to fetch
     method: GET # default=GET
     expectStatus: 200 # operational status, default=200
     followRedirect: false # should fetch follow redirects, default=false
     linkable: false # allows the title to be a link, default=true
 
-  - id: www-cloudflare-com
-    name: www.cloudflare.com
+  - id: blog.hzxcaq.us.kg
+    name: blog.hzxcaq.us.kg
     description: 'Built for anything connected to the Internet.'
-    url: 'https://www.cloudflare.com'
+    url: 'https://blog.hzxcaq.us.kg'
     method: GET
     expectStatus: 200
     linkable: true # allows the title to be a link, default=true
 
-  - id: blog-cloudflare-com
-    name: The Cloudflare Blog
-    url: 'https://blog.cloudflare.com/'
+  - id: fn.hzxcaq.us.kg
+    name: fn.hzxcaq.us.kg
+    url: 'https://fn.hzxcaq.us.kg/'
     method: GET
     expectStatus: 200
